add full website functions

--- a/index.html
+++ b/index.html
@@ -4,17 +4,24 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>STATIC — Handmade Streetwear</title>
+    
+    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+
     <meta name="description" content="Exclusive handmade streetwear. Every stitch is a choice. Coming soon." />
     <meta name="author" content="STATIC" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Syne:wght@800&display=swap" rel="stylesheet">
 
     <meta property="og:title" content="STATIC — Handmade Streetwear" />
     <meta property="og:description" content="Exclusive handmade streetwear. Every stitch is a choice." />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta property="og:image" content="/og-image.jpg" />
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@STATIC" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="/og-image.jpg" />
   </head>
 
   <body>
